--- a/.drone.yml
+++ b/.drone.yml
@@ -4,6 +4,10 @@ name: NETWORK CI/CD
 
 
 steps:
+- name: Black Code Format Check
+  image: chikamalu/netcicd:latest
+  commands:
+  - black . --check
 - name: Install and deploy docker image
   image: chikamalu/netcicd:latest
   environment:
@@ -12,7 +16,7 @@ steps:
     USERNAME:
       from_secret: USERNAME
   commands:
-  - pip3 install -r requirements.txt
+  # - pip3 install -r requirements.txt
   - python3 get_interfaces.py
 
 trigger:
