--- a/configs/config.yml
+++ b/configs/config.yml
@@ -2,8 +2,8 @@
 inventory:
   plugin: SimpleInventory
   options:
-    host_file: "./configs/hosts.yaml"
-    group_file: "./configs/groups.yaml"
+    host_file: "./configs/hosts.yml"
+    group_file: "./configs/groups.yml"
 runner:
   plugin: threaded
   options:
