--- a/.drone.yml
+++ b/.drone.yml
@@ -22,7 +22,7 @@ steps:
     USERNAME:
       from_secret: USERNAME
   commands:
-  - python build.py --no_dry_run
+  - python build.py --dry_run
 
 - name: Install and deploy docker image
   image: chikamalu/netcicd:latest
